# parlez-vous

./: .gitattributes  .gitignore  CNAME  LICENSE  README.md  index.html
Qwen3-TTS/: .gitignore  pyproject.toml
assets/: index-0QcVqRqX.js  index-B0lTb43y.css  index-Bc4uzuEo.js  index-Bt72_2xp.css  index-CeaXXwD8.js  index-EFMAEjYX.css  index-LntCID1_.js  index-Vu11wrTf.js
docs/: README.md  architecture.md  development.md  features.md  installation.md
hangulnist/: .gitignore  README.md  hangul_classes.json  main.py  pyproject.toml
parlezvous/: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  runpod-notes.txt  test-import.js  vite.config.js  vitest.config.ts
parlezvous/plugins/tauri-plugin-litert/: Cargo.toml  build.rs
parlezvous/plugins/tauri-plugin-litert/android/: build.gradle.kts  proguard-rules.pro
parlezvous/plugins/tauri-plugin-litert/android/src/androidTest/java/: ExampleInstrumentedTest.kt
parlezvous/plugins/tauri-plugin-litert/android/src/main/java/: LitertPlugin.kt
parlezvous/plugins/tauri-plugin-litert/android/src/main/java/com/plugin/litert/: ModelDownloadWorker.kt
parlezvous/plugins/tauri-plugin-litert/android/src/test/java/: ExampleUnitTest.kt
parlezvous/plugins/tauri-plugin-litert/permissions/: default.toml
parlezvous/plugins/tauri-plugin-litert/permissions/autogenerated/: reference.md
parlezvous/plugins/tauri-plugin-litert/permissions/autogenerated/commands/: check_model_exists.toml  init_model.toml  pick_gallery_image.toml  purge_model.toml
parlezvous/plugins/tauri-plugin-litert/permissions/schemas/: schema.json
parlezvous/plugins/tauri-plugin-litert/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
parlezvous/plugins/tauri-plugin-supertonic/: Cargo.toml  README.md  build.rs  print_dirs.rs
parlezvous/plugins/tauri-plugin-supertonic/android/: build.gradle.kts  consumer-rules.pro
parlezvous/plugins/tauri-plugin-supertonic/android/src/main/: AndroidManifest.xml
parlezvous/plugins/tauri-plugin-supertonic/android/src/main/java/com/plugin/supertonic/: SupertonicDownloadWorker.kt  SupertonicPlugin.kt
parlezvous/plugins/tauri-plugin-supertonic/permissions/: default.toml
parlezvous/plugins/tauri-plugin-supertonic/permissions/autogenerated/: reference.md
parlezvous/plugins/tauri-plugin-supertonic/permissions/autogenerated/commands/: close_model.toml  download_supertonic_models.toml  generate_chat.toml  generate_supertonic_tts.toml  is_supertonic_ready.toml  purge_supertonic_models.toml
parlezvous/plugins/tauri-plugin-supertonic/permissions/schemas/: schema.json
parlezvous/plugins/tauri-plugin-supertonic/src/: commands.rs  desktop.rs  helper.rs  lib.rs  mobile.rs  models.rs
parlezvous/src-tauri/: .gitignore  Cargo.toml  build.rs  deny.toml  tauri.conf.json
parlezvous/src-tauri/capabilities/: default.json
parlezvous/src-tauri/src/: lib.rs  main.rs  model.rs  test_bytes.rs  test_perm.rs
parlezvous/src-tauri/src/ai/: litert_adapter.rs  mod.rs  ollama_adapter.rs  test.rs  tts_adapter.rs
parlezvous/src-tauri/src/db/: mod.rs
parlezvous/src-tauri/src/services/: calendar.rs  conjugator.rs  curriculum.rs  journal.rs  mod.rs  profile.rs  rag.rs  settings.rs  srs.rs  vocab.rs
parlezvous/src-tauri/tests/: fuzz_tests.rs  integration_tests.rs
(+61 files in other folders)
