[package]
name = "parlezvous"
version = "0.1.0"
description = "A Tauri App"
authors = ["n123xyz"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "parlezvous_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
burn-onnx = "0.21.0-pre.4"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ollama-rs = { version = "0.3.4", default-features = false, features = ["rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1.89"
burn = { version = "0.21.0-pre.4", features = ["ndarray"] }
burn-store = "0.21.0-pre.4"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio = { version = "1.52.1", features = ["macros", "rt", "rt-multi-thread", "test-util"] }
sqlite-vec = "0.1.9"
pdf-extract = "0.10.0"
tauri-plugin-dialog = "2.7.1"
regex = "1.12.3"
tauri-plugin-litert = { path = "../plugins/tauri-plugin-litert" }
tauri-plugin-supertonic = { path = "../plugins/tauri-plugin-supertonic" }
tokenizers = "0.19"

[dev-dependencies]
async-trait = "0.1.89"
mockall = "0.14.0"
proptest = "1.11.0"

# Only compile webkit2gtk when building for Desktop Linux (not Android)
[target.'cfg(all(target_os = "linux", not(target_os = "android")))'.dependencies]
webkit2gtk = "2.0.2"

[profile.dev]
opt-level = 3
