[package]
name = "tauri-plugin-supertonic"
version = "0.1.0"
authors = ["n123xyz"]
description = ""
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-supertonic"

[dependencies]
tauri = { version = "2.11.0" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic", "ndarray"] }
ndarray = { version = "0.17.2", features = ["rayon"] }
rayon = "1.10"
hound = "3.5"
unicode-normalization = "0.1"
regex = "1.10"
log = "0.4"
tokio = { version = "1", features = ["sync"] }
anyhow = "1.0.102"
rand = "0.9.4"
rand_distr = "0.5.1"
serde_json = "1.0.150"
libc = "0.2.186"
whatlang = "0.16.2"

[build-dependencies]
tauri-plugin = { version = "2.6.0", features = ["build"] }

[features]
xnnpack = []
